fixed spacing and added time travel

--- a/public/static/styles/home.css
+++ b/public/static/styles/home.css
@@ -331,7 +331,7 @@ div.quote h1 {
         width: 100px;
         height: 40px;
         padding: 0 .3em;
-        margin: 1rem 1em 0 1em;
+        margin: 1rem 1em 1em 1em;
     }
 }
 
